--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,3 +7,4 @@ docstrings = JavaDoc
 includeCurlyBraceInSelectChains = false
 optIn.breakChainOnFirstMethodDot = false
 version = "2.0.0-RC5"
+trailingCommas = preserve
