--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,5 +6,5 @@ continuationIndent.defnSite = 2
 docstrings = JavaDoc
 includeCurlyBraceInSelectChains = false
 optIn.breakChainOnFirstMethodDot = false
-version = "2.0.1"
+version = "2.1.0-RC1"
 trailingCommas = preserve
